# openstackDemo

./: AUTHORS  ChangeLog  README.md  configure.ini  requirement.txt  rm.sh  setup.cfg  setup.py  tags
openstackDemo/: client.py  server.py
openstackDemo.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  pbr.json  top_level.txt
openstackDemo/api/: app.py  config.py  expose.py
openstackDemo/api/controllers/: root.py
openstackDemo/api/controllers/v1/: controller.py  users.py
openstackDemo/api/v1/: .wsgi.py.swp  router.py
openstackDemo/cmd/: .api.py.swp  api.py
